# Cortexa

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/agents/: action_agent.py  reasoning_agent.py  retrieval_agent.py
app/api/routes/: insights.py  query.py  summarize.py
app/config/: settings.py
app/core/: __init__.py  security.py
app/ingestion/: __init__.py  client.py  handlers.py  publisher.py
app/models/: embedding.py  message.py  user.py
app/schemas/: message.py  query.py  response.py
app/services/: ingestion_service.py  memory_service.py  retrieval_service.py
app/vector/: __init__.py  search.py  store.py
app/workers/: celery_app.py
app/workers/tasks/: analysis.py  embedding.py  summarization.py
bot/: client.py  handlers.py
bot/__pycache__/: client.py
scripts/: seed.py
