[project]
name = "cortexa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "discord-py>=2.7.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-ai>=1.87.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
]
